# edge-ml-systems

./: HOMEPAGE.md
amdahl/: README.md
bnn/: README.md
compression_pruning/: README.md
compression_quantization/: README.md
cuda_microbench/: CMakeLists.txt  README.md  conv_lite_gemm.cu  cuda_events.h  gemm_cublas.cu  gemm_naive.cu  gemm_tiled.cu  metrics.md  vector_add.cu
cuda_microbench/docs/: fpga_setup_vivado.md  mini_project_2_report.md  notes_nsight.md  summary_cuda.md
cuda_microbench/results/: .gitignore
cuda_microbench/scripts/: parse_to_csv.py  plot_results.py  run_all.sh
distributed/: README.md
docs/: 00_goal_and_block_definition.md  00_problem_statement.md  01_method_overview.md  01_reference_math_int8.md  02_comparison_report_template.md  02_feature_sets.md  03_latency_throughput_energy_discussion.md  03_models_and_training.md  04_selection_algorithm.md  05_expected_results.md  async_driver_backpressure.md  consolidation.md  decision_guide_compression_fpga.md  decision_matrix.md  dla_basics_and_selection_logic.md  dla_debug_checklist.md  end_to_end_bottleneck_examples.md  fpga_checklist.md  fpga_mlp_v0_demo_notes.md  jetson_deployment_playbook.md  jetson_onnxruntime_gpu_notes.md  jetson_ready_guide.md  jetson_stack_overview.md  jetson_version_matrix.md  pipeline_architecture_repo_map.md  platform_diagram.md  proxy_reliability_compute_budget.md  relay_to_binary_pipeline.md  results_plan_run_later.md  results_policy.md  summary_jetson_fpga_video.md  summary_which_trick_helps_which_layer.md  trt_vs_tvm_vs_fpga_decision_matrix.md  weekwrap.md  weekwrap_checklist.md  when_fpga_bnn_makes_sense.md
efficient_math/: README.md
federated/: README.md
fpga/: README.md
fpga_bnn_xnor_popcount/: README.md
fpga_cost_model/: README.md
fpga_cost_model_v1/: README.md
fpga_cost_proxy_nas/: README.md
fpga_latency_validation/: .gitignore  README.md
fpga_platform_spec/: README.md
fpga_tiling_sweep/: README.md
gnn_latency/: README.md
host_tools/: protocol.py  uart_client.py
host_tools_async/: README.md  metrics.py  uart_async_client.py
inference_bench/: .dockerignore  .gitignore  README.md  docker-compose.yml  requirements.txt  run_accuracy_eval.py  run_benchmark.py  run_cpp_preproc_demo.py  run_file_io_benchmark.py  run_latency_sweep.py  run_onnxruntime_benchmark.py  run_pipeline_demo.py  run_preproc_speedup.py  run_profile_pytorch.py  run_pytorch_benchmark.py  run_queue_sim.py  run_source_smoketest.py  run_streaming_benchmark.py  run_timer_selftest.py  run_transfer_budget_demo.py  run_video_decode_benchmark.py
inference_bench/cpp_preproc/: CMakeLists.txt  README.md
inference_bench/cpp_preproc/include/: preproc.hpp  simd.hpp
inference_bench/cpp_preproc/python/: README.md  bindings.cpp
inference_bench/cpp_preproc/src/: main.cpp  preproc.cpp  simd.cpp
inference_bench/cpp_preproc/tests/: test_preproc.cpp
latency_predictor_dataset/: README.md
latency_predictor_model/: README.md
llvm_ir_basics/: README.md
lutnet_notes/: README.md
micro_npu_platform/: README.md
micro_npu_survey/: README.md
nas_rl/: README.md
(+580 files in other folders)
